style: add section "our team" + "projects"

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 </section>
 
 <div class="container" id="content"> <!-- begin .container -->
+
   <!-- DESCRIPTION -->
   <div class="row justify-content-center" id="description">
     <div class="col-3">
@@ -77,154 +78,43 @@
 
   <!-- PROJECTS -->
   <h2 class="display-4 text-center text-gradient" id="projets">PROJETS</h2>
-  <div class="cards">
-    <div class="d-flex justify-content-center">
-      <div class="card mb-3">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img class="img" src= assets/img/monka1.png alt="Image Monka Project">
-          </div>
-          <div class="col-md-8">
-            <div class="card-block text-center">
-              <div class="card-body">
-                <h5 class="card-title">The Monka Project</h5>
-                <p class="card-text">Monka project est un projet open-source destiné à faciliter la facturation pour les auto-entrepreneurs. Toujours en cours de développement, il est régulièrement mis à jour entre deux missions</p>
-                <p class="card-text"><small class="text-muted">Projet en cours de réalisation</small></p>
-                <a href="https://github.com/Julio-Bento-Diddy-Lara-Detsou-team/Monka-Project" class="btn btn-primary stretched-link">Voir le projet</a>
-              </div>
-            </div>
-          </div>
+
+  <div class="row mb-5 align-items-center">
+
+    <div class="col-6">
+      <img class="img-fluid rounded" src= assets/img/monka1.png alt="Image Monka Project">
+    </div>
+
+    <div class="col-5">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">The Monka Project</h5>
+          <p class="card-text text-justify">
+            Monka project est un projet open-source destiné à faciliter la facturation pour les auto-entrepreneurs.
+            Toujours en cours de développement, il est régulièrement mis à jour entre deux missions
+          </p>
+          <a href="#" class="btn btn-primary">Voir le projet</a>
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-center">
-      <div class="card mb-3">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src= assets/img/cykl2.png  alt="Image Cykl Project">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <div class="card-bock text-center">
-                <h5 class="card-title">Cykl</h5>
-                <p class="card-text">Cykl est une application éditée par we are the words sprl, une société d'optimisation de contenu SEO basée en Belgique à Bruxelle. Nous intervenons sur la partie back-end de l'application afin de la rendre commercialisable à l'horizon 2021</p>
-                <p class="card-text"><small class="text-muted">Projet en cours de réalisation</small></p>
-                <a href="https://www.cykl.be/" class="btn btn-primary stretched-link">Voir le projet</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-
-<!-- HIRE US -->
-<div class="container" id="present">
-  <h2 class="display-4 text-center text-gradient" id="hire_us">Nous recruter</h2>
-
-  <div class="row" id="skill">
-    <div class="col">
-      <h3 class="text-center">Julien Tribouillier</h3>
-      <p align="center"><img src="https://devicons.github.io/devicon/devicon.git/icons/angularjs/angularjs-original.svg" alt="angularjs" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/>
-        <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/mysql/mysql-original-wordmark.svg" alt="mysql" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/photoshop/photoshop-plain.svg" alt="photoshop" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/postgresql/postgresql-original-wordmark.svg" alt="postgresql" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/rails/rails-original-wordmark.svg" alt="rails" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/ruby/ruby-original-wordmark.svg" alt="ruby" width="40" height="40"/>
-      </p>
-    </div>
-    <div class="col">
-      <h3 class="text-center">David Bento-Pereira</h3>
-      <p align="center">
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/angularjs/angularjs-original.svg" alt="angularjs" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/>
-        <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/mysql/mysql-original-wordmark.svg" alt="mysql" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/photoshop/photoshop-plain.svg" alt="photoshop" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/postgresql/postgresql-original-wordmark.svg" alt="postgresql" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/rails/rails-original-wordmark.svg" alt="rails" width="40" height="40"/>
-        <img src="https://devicons.github.io/devicon/devicon.git/icons/ruby/ruby-original-wordmark.svg" alt="ruby" width="40" height="40"/>
-      </p>
-    </div>
   </div>
 
-  <h2 class="display-4 text-center text-gradient">NOS TALENTS</h2>
-
-  <div class="row">
-    <!-- Left Column -->
+  <div class="row align-items-center">
     <div class="col-6">
-      <!-- Block Left Top -->
-      <div class="row align-items-center justify-content-center">
-        <div class="col-2">
-          <img src="assets/img/idea_bulb.png" alt="">
-        </div>
-        <div class="col-6">
-          <h5>Développement Web</h5>
-          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
-        </div>
-      </div>
-      <!-- Block Left Middle -->
-      <div class="row align-items-center justify-content-center">
-        <div class="col-2">
-          <img src="assets/img/idea_bulb.png" alt="">
-        </div>
-        <div class="col-6">
-          <h5>Développement Web</h5>
-          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
-        </div>
-      </div>
-      <!-- Block Left Bottom -->
-      <div class="row align-items-center justify-content-center">
-        <div class="col-2">
-          <img src="assets/img/idea_bulb.png" alt="">
-        </div>
-        <div class="col-6">
-          <h5>Développement Web</h5>
-          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
-        </div>
-      </div>
+      <img class="img-fluid rounded" src= assets/img/cykl2.png  alt="Image Cykl Project">
     </div>
 
-    <!-- Right Column -->
-    <div class="col-6">
-      <!-- Block Left Top -->
-      <div class="row align-items-center justify-content-center">
-        <div class="col-2">
-          <img src="assets/img/idea_bulb.png" alt="">
-        </div>
-        <div class="col-6">
-          <h5>Développement Web</h5>
-          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
-        </div>
-      </div>
-      <!-- Block Left Middle -->
-      <div class="row align-items-center justify-content-center">
-        <div class="col-2">
-          <img src="assets/img/idea_bulb.png" alt="">
-        </div>
-        <div class="col-6">
-          <h5>Développement Web</h5>
-          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
-        </div>
-      </div>
-      <!-- Block Left Bottom -->
-      <div class="row align-items-center justify-content-center">
-        <div class="col-2">
-          <img src="assets/img/idea_bulb.png" alt="">
-        </div>
-        <div class="col-6">
-          <h5>Développement Web</h5>
-          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
+    <div class="col-5">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Cykl</h5>
+          <p class="card-text text-justify">
+            Cykl est une application éditée par we are the words sprl, une société d'optimisation de contenu SEO basée
+            en Belgique à Bruxelle. Nous intervenons sur la partie back-end de l'application afin de la rendre
+            commercialisable à l'horizon 2021
+          </p>
+          <a href="#" class="btn btn-primary">Voir le projet</a>
         </div>
       </div>
     </div>
@@ -232,13 +122,145 @@
 
   <!-- OUR TEAM -->
 
-  <!-- ... -->
+  <h2 class="display-4 text-center text-gradient">NOTRE ÉQUIPE</h2>
+
+
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="card mb-5">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="assets/img/profil_pic_bento.jpg" class="card-img" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title text-center m-3">David Bento-Pereira</h5>
+              <p class="card-text text-justify m-4">
+                <em>“Computer is not the thing, it’s the thing that gets you to the thing”</em> est ma citation préféré.
+                Je vois l’informatique comme un outil au service de l’Humain et j’aurais à coeur de mettre mes
+                compétences au service de votre projet. Revant de liberté, j’ai saisi l’opportunité de m’associer
+                avec Julien pour  me lancer comme freelance.
+              </p>
+              <div class="social_networks--right">
+                <img src="assets/img/logo_malt_round.png" alt="" class="m-2">
+                <img src="assets/img/logo_linkedin.png" alt="" class="m-2">
+                <img src="assets/img/logo_github.png" alt="" class="m-2">
+                <img src="assets/img/logo_dev.to.png" alt="" class="m-2">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="card">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title text-center m-3">Julien Tribouillier</h5>
+              <p class="card-text text-justify m-4">
+                Ancien commercial, je me suis reconverti dans l’informatique et plus spécifiquement dans le développement web
+                pour vivre de ma passion. Ma rencontre avec David lors du bootcamp The Hacking Project fut le début d’une belle
+                amitié et posa la première pierre de notre aventure de Freelance.
+              </p>
+              <div class="social_networks--left">
+                <a href="https://www.malt.fr"><img src="assets/img/logo_malt_round.png" alt="" class="m-2"></a>
+                <a href="https://www.linkedin.com/in/julien-tribouillier/"><img src="assets/img/logo_linkedin.png" alt="" class="m-2"></a>
+                <a href="https://github.com/Popikadir"><img src="assets/img/logo_github.png" alt="" class="m-2"></a>
+                <a href="https://dev.to/"><img src="assets/img/logo_dev.to.png" alt="" class="m-2"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img src="assets/img/pic_profile_julio.jpg" class="card-img" alt="...">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- OUR SKILLS -->
 
+  <h2 class="display-4 text-center text-gradient">NOS TALENTS</h2>
+
+  <div class="row justify-content-around">
+    <!-- Left Column -->
+    <div class="col-5">
+      <!-- Block Left Top -->
+      <div class="row align-items-center justify-content-end mb-4">
+        <div class="col-1 mr-4">
+          <img class="idea" src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-7">
+          <h5>Développement Web</h5>
+          <p class="text-justify">Site vitrine, site e-commerce, application web. Parlez-nous de votre projet.</p>
+        </div>
+      </div>
+      <!-- Block Left Middle -->
+      <div class="row align-items-center justify-content-end mb-4">
+        <div class="col-1 mr-4">
+          <img class="idea" src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-7">
+          <h5>Intégration Web</h5>
+          <p class="text-justify">Nous donnons vie à vos maquettes, en respectant les standards du web HTML/CSS.</p>
+        </div>
+      </div>
+      <!-- Block Left Bottom -->
+      <div class="row align-items-center justify-content-end mb-4">
+        <div class="col-1 mr-4">
+          <img class="idea" src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-7">
+          <h5>Conception de MVP</h5>
+          <p class="text-justify">Vous avez une idée d’application web mais vous ne savez pas coder ? Nous lui donnerons vie pour vous.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Right Column -->
+    <div class="col-5">
+      <!-- Block Left Top -->
+      <div class="row align-items-center justify-content-start mb-4">
+        <div class="col-1 mr-4">
+          <img class="idea" src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-7">
+          <h5>Base de Données</h5>
+          <p>Nous traduisons vos besoins métier pour concevoir votre base de données de A à Z.</p>
+        </div>
+      </div>
+      <!-- Block Left Middle -->
+      <div class="row align-items-center justify-content-start mb-4">
+        <div class="col-1 mr-4">
+          <img class="idea" src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-7">
+          <h5>Responsive Design</h5>
+          <p>Nous développons pour une compatibilité sur tous les supports. Tablette/smartphone/Ordinateur.</p>
+        </div>
+      </div>
+      <!-- Block Left Bottom -->
+      <div class="row align-items-center justify-content-start mb-4">
+        <div class="col-1 mr-4">
+          <img class="idea" src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-7">
+          <h5>Back Office</h5>
+          <p>Outil indispensable à la bonne gestion d’un site web, nous concevons votre interface administration.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- HIRE US -->
+
   <h2 class="display-4 text-center text-gradient">NOUS RECRUTER</h2>
 
-  <p class="lead text-center">Retrouvez-nous sur ces plateformes de Freelancing et proposez-nous votre projet</p>
+  <p class="lead text-center mb-5">Retrouvez-nous sur ces plateformes de Freelancing et proposez-nous votre projet</p>
 
   <div class="row justify-content-center mb-4">
     <!-- Malt Profile -->
@@ -250,21 +272,21 @@
     <!-- Upwork Profile -->
     <div class="col-4 text-center">
       <a href="">
-        <img src="assets/img/logo_upwork.png" alt="Logo Lalt">
+        <img src="assets/img/logo_upwork.png" alt="Logo Malt">
       </a>
     </div>
   </div>
 
-
 </div> <!-- end .container -->
+
 <!-- FOOTER -->
 <footer class="footer mt-auto py-3 bg-dark">
-  <div class="container">
-    <span class="text-muted">Place sticky footer content here.</span>
+  <div class="container text-center">
+    <span class="text-muted">Made with ♥️ by Julio & Bento</span>
   </div>
 </footer>
 
-<!-- Javascript -->
+<!-- JAVASCRIPT -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 <script src="./assets/js/app.js"></script>
