--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><span class="text-primary">J</span>ulio & <span class="text-primary">B</span>ento</a>
+    <span class="navbar-brand text-gradient logo">Julio & Bento</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,13 +25,16 @@
           <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#accueil">NOTRE EQUIPE</a>
+          <a class="nav-link" href="#accueil">NOS PROJETS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#projets">PORTFOLIO</a>
+          <a class="nav-link" href="#projets">NOTRE EQUIPE</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">CONTACT</a>
+          <a class="nav-link" href="#projets">NOS TALENTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">NOUS RECRUTER</a>
         </li>
       </ul>
     </div>
@@ -42,81 +45,100 @@
 <section>
   <div class="jumbotron jumbotron-fluid">
     <div class="container text-center text-light">
-      <h1 class="display-4"> <span class="text-primary">J</span>ulio & <span class="text-primary">B</span>ento</h1>
-      <h2 class="h3">Développeurs Ruby on Rails</h2>
-      <a type="button" href="#projets" class="btn btn-primary btn-lg m-3">Nos projets</a>
-      <a type="button" href="#contact" class="btn btn-secondary btn-lg  m-3">Nous contacter</a>
+      <div class="d-flex align-items-end">
+        <h2 class="h3">Parce que deux développeurs valent mieux qu’un.</h2>
+        <a type="button" href="#projets" class="btn btn-primary btn-lg m-3">Nos projets</a>
+        <a type="button" href="#contact" class="btn btn-secondary btn-lg  m-3">Nous recruter</a>
+      </div>
     </div>
   </div>
 </section>
 
 <div class="container" id="content"> <!-- begin .container -->
 
+  <div class="row mb-5">
+    <p class="lead text-center">
+      Développeurs Ruby on Rails, nous vous accompagnons dans la réalisation de vos projets web, de la mise en place d’un site vitrinne à un site e-commerce,
+      d’un site vitrine Wordpress ou d’une application web complète en Ruby on Rails.
+    </p>
+  </div>
+
   <!-- DESCRIPTION -->
-  <div class="row justify-content-center" id="description">
+  <div class="row justify-content-around align-items-center" id="description">
     <div class="col-3">
       <h3 class="text-center">Full-Remote</h3>
       <p class="text-justify" id="d1">
-        Nous travaillons exclusivement en Full-Remote, c'est à dire de notre bureau. Nous échangeons régulièrement avec nos clients par téléphone, ou par visio. Cela évite des déplacements superflux et correspond à notre vision écologique du travail.
+        L’informatique abolit les distances physique et nous permet de profiter d’un confort de vivre accru
+        pour vous offrir plus de confiance, de  flexibilité et d’engagement.
       </p>
+      <img src="assets/img/undraw_design_components.png" alt="" class="mt-4">
     </div>
 
     <div class="col-3">
+      <img src="assets/img/undraw_Invite.png" alt="" class="mb-4">
       <h3 class="text-center">Fléxibles</h3>
       <p class="text-justify" id="d2">
-        Nous nous adaptons à vos éxigences. Dans le développement, tout est possible. Tout dépend du temps pour le faire ainsi que de votre budget. Nous saurons vous conseiller au mieux afin de répondre efficacement à vos demandes.
+        Parce que nous comprenons la vie d’un projet, nous nous adaptons à vos contraintes et n’hésitons pas à répondre présent pour traiter vos urgences.
       </p>
     </div>
 
     <div class="col-3">
-      <h3 class="text-center">Persévérants</h3>
+      <h3 class="text-center">Innovant</h3>
       <p class="text-justify" id="d3">
-        Le métier de développeur, c'est régler des problèmes. Nous nous engageons à vous fournir la prestation demandé qu'importe la difficulté rencontrée. Nous irons quoi qu'il arrive au bout de nos engagements.
+        Nous saurons réaliser votre projet, quelle que soit votre localisation.
+        Du rêve à la réalité : Nous excellons particulièrement dans la concrétisation de vos idées,
+        même les plus farfelues, pour les transformer en projets et produits innovants.
       </p>
+      <img src="assets/img/undraw_server_cluster.png" alt="" class="mt-4">
     </div>
   </div>
 
   <!-- PROJECTS -->
-  <h2 class="display-4 text-center text-gradient" id="projets">PROJETS</h2>
+  <h2 class="display-4 text-center text-gradient" id="projets">NOS PROJETS</h2>
 
   <div class="row mb-5 align-items-center">
 
     <div class="col-6">
-      <img class="img-fluid rounded" src= assets/img/monka1.png alt="Image Monka Project">
+      <img class="img-fluid rounded" src= assets/img/laptopmonka.png alt="Image Monka Project">
     </div>
 
     <div class="col-5">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">The Monka Project</h5>
-          <p class="card-text text-justify">
-            Monka project est un projet open-source destiné à faciliter la facturation pour les auto-entrepreneurs.
-            Toujours en cours de développement, il est régulièrement mis à jour entre deux missions
-          </p>
-          <a href="#" class="btn btn-primary">Voir le projet</a>
-        </div>
+      <h5 class="text-center mb-4">The Monka Project</h5>
+      <p class="card-text text-justify mb-2">
+        Monka project est un projet open-source destiné à faciliter la facturation pour les auto-entrepreneurs.
+        Toujours en cours de développement, il est régulièrement mis à jour entre deux missions
+      </p>
+      <div class="card-text mb-4">
+        <span class="badge rounded-pill bg-dark">Ruby on Rails</span>
+        <span class="badge rounded-pill bg-dark">Bootstrap 5</span>
+        <span class="badge rounded-pill bg-dark">Heroku</span>
+      </div>
+      <div class="text-center">
+        <a href="#" class="btn btn-outline-light">Voir le projet</a>
       </div>
     </div>
 
   </div>
 
   <div class="row align-items-center">
-    <div class="col-6">
-      <img class="img-fluid rounded" src= assets/img/cykl2.png  alt="Image Cykl Project">
-    </div>
-
     <div class="col-5">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Cykl</h5>
-          <p class="card-text text-justify">
-            Cykl est une application éditée par we are the words sprl, une société d'optimisation de contenu SEO basée
-            en Belgique à Bruxelle. Nous intervenons sur la partie back-end de l'application afin de la rendre
-            commercialisable à l'horizon 2021
-          </p>
-          <a href="#" class="btn btn-primary">Voir le projet</a>
-        </div>
+      <h5 class="text-center mb-4">Cykl</h5>
+      <p class="card-text text-justify mb-2">
+        Cykl est une application éditée par we are the words sprl, une société d'optimisation de contenu SEO basée
+        en Belgique à Bruxelle. Nous intervenons sur la partie back-end de l'application afin de la rendre
+        commercialisable à l'horizon 2021
+      </p>
+      <div class="card-text mb-4">
+        <span class="badge rounded-pill bg-dark">Ruby on Rails</span>
+        <span class="badge rounded-pill bg-dark">Angular</span>
+        <span class="badge rounded-pill bg-dark">Heroku</span>
       </div>
+      <div class="text-center">
+        <a href="#" class="btn btn-outline-light">Voir le projet</a>
+      </div>
+    </div>
+    <div class="col-6">
+      <img class="img-fluid rounded" src= assets/img/cykl2laptop.png  alt="Image Cykl Project">
     </div>
   </div>
 
@@ -142,10 +164,10 @@
                 avec Julien pour  me lancer comme freelance.
               </p>
               <div class="social_networks--right">
-                <img src="assets/img/logo_malt_round.png" alt="" class="m-2">
-                <img src="assets/img/logo_linkedin.png" alt="" class="m-2">
-                <img src="assets/img/logo_github.png" alt="" class="m-2">
-                <img src="assets/img/logo_dev.to.png" alt="" class="m-2">
+                <a href="//www.malt.fr/profile/davidbentopereira" target="_blank"><img src="assets/img/logo_malt_round.png" alt="" class="m-2"></a>
+                <a href="//www.linkedin.com/in/david-bento-pereira/" target="_blank"><img src="assets/img/logo_linkedin.png" alt="" class="m-2"></a>
+                <a href="//github.com/davidBentoPereira" target="_blank"><img src="assets/img/logo_github.png" alt="" class="m-2"></a>
+                <a href="//dev.to/bento" target="_blank"><img src="assets/img/logo_dev.to.png" alt="" class="m-2"></a>
               </div>
             </div>
           </div>
@@ -167,10 +189,10 @@
                 amitié et posa la première pierre de notre aventure de Freelance.
               </p>
               <div class="social_networks--left">
-                <a href="https://www.malt.fr"><img src="assets/img/logo_malt_round.png" alt="" class="m-2"></a>
-                <a href="https://www.linkedin.com/in/julien-tribouillier/"><img src="assets/img/logo_linkedin.png" alt="" class="m-2"></a>
-                <a href="https://github.com/Popikadir"><img src="assets/img/logo_github.png" alt="" class="m-2"></a>
-                <a href="https://dev.to/"><img src="assets/img/logo_dev.to.png" alt="" class="m-2"></a>
+                <a href="//dev.to/" target="_blank"><img src="assets/img/logo_dev.to.png" alt="" class="m-2"></a>
+                <a href="//github.com/Popikadir" target="_blank"><img src="assets/img/logo_github.png" alt="" class="m-2"></a>
+                <a href="//www.linkedin.com/in/julien-tribouillier/" target="_blank"><img src="assets/img/logo_linkedin.png" alt="" class="m-2"></a>
+                <a href="//www.malt.fr" target="_blank"><img src="assets/img/logo_malt_round.png" alt="" class="m-2"></a>
               </div>
             </div>
           </div>
@@ -258,7 +280,7 @@
 
   <!-- HIRE US -->
 
-  <h2 class="display-4 text-center text-gradient">NOUS RECRUTER</h2>
+  <h2 class="display-4 text-center text-gradient" id="contact">NOUS RECRUTER</h2>
 
   <p class="lead text-center mb-5">Retrouvez-nous sur ces plateformes de Freelancing et proposez-nous votre projet</p>
 
@@ -271,7 +293,7 @@
     </div>
     <!-- Upwork Profile -->
     <div class="col-4 text-center">
-      <a href="">
+      <a href="//www.upwork.com/freelancers/~01bc7eb64810734817" target="_blank">
         <img src="assets/img/logo_upwork.png" alt="Logo Malt">
       </a>
     </div>
