style : general improvements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <span class="navbar-brand text-gradient logo">Julio & Bento</span>
+    <!--    <span class="navbar-brand text-gradient logo">Julio & Bento</span>-->
+    <div class="neon">
+      <p class="neon-text">
+        Julio <span class="first">&</span> Bento
+      </p>
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -45,10 +50,14 @@
 <section>
   <div class="jumbotron jumbotron-fluid">
     <div class="container text-center text-light">
-      <div class="d-flex align-items-end">
+      <div>
         <h2 class="h3">Parce que deux développeurs valent mieux qu’un.</h2>
-        <a type="button" href="#projets" class="btn btn-primary btn-lg m-3">Nos projets</a>
-        <a type="button" href="#contact" class="btn btn-secondary btn-lg  m-3">Nous recruter</a>
+        <a href="#projets" class="m-3">
+          <button class="btn-hover color-1">NOS PROJETS</button>
+        </a>
+        <a href="#contact" class="m-3">
+          <button class="btn-hover color-8">NOUS RECRUTER</button>
+        </a>
       </div>
     </div>
   </div>
@@ -73,7 +82,6 @@
       </p>
       <img src="assets/img/undraw_design_components.png" alt="" class="mt-4">
     </div>
-
     <div class="col-3">
       <img src="assets/img/undraw_Invite.png" alt="" class="mb-4">
       <h3 class="text-center">Fléxibles</h3>
@@ -81,7 +89,6 @@
         Parce que nous comprenons la vie d’un projet, nous nous adaptons à vos contraintes et n’hésitons pas à répondre présent pour traiter vos urgences.
       </p>
     </div>
-
     <div class="col-3">
       <h3 class="text-center">Innovant</h3>
       <p class="text-justify" id="d3">
@@ -216,7 +223,7 @@
         <div class="col-1 mr-4">
           <img class="idea" src="assets/img/idea_bulb.png" alt="">
         </div>
-        <div class="col-7">
+        <div class="col-9">
           <h5>Développement Web</h5>
           <p class="text-justify">Site vitrine, site e-commerce, application web. Parlez-nous de votre projet.</p>
         </div>
@@ -224,9 +231,9 @@
       <!-- Block Left Middle -->
       <div class="row align-items-center justify-content-end mb-4">
         <div class="col-1 mr-4">
-          <img class="idea" src="assets/img/idea_bulb.png" alt="">
+          <img class="idea" src="assets/img/integration.png" alt="">
         </div>
-        <div class="col-7">
+        <div class="col-9">
           <h5>Intégration Web</h5>
           <p class="text-justify">Nous donnons vie à vos maquettes, en respectant les standards du web HTML/CSS.</p>
         </div>
@@ -236,7 +243,7 @@
         <div class="col-1 mr-4">
           <img class="idea" src="assets/img/idea_bulb.png" alt="">
         </div>
-        <div class="col-7">
+        <div class="col-9">
           <h5>Conception de MVP</h5>
           <p class="text-justify">Vous avez une idée d’application web mais vous ne savez pas coder ? Nous lui donnerons vie pour vous.</p>
         </div>
@@ -250,9 +257,9 @@
         <div class="col-1 mr-4">
           <img class="idea" src="assets/img/idea_bulb.png" alt="">
         </div>
-        <div class="col-7">
+        <div class="col-9">
           <h5>Base de Données</h5>
-          <p>Nous traduisons vos besoins métier pour concevoir votre base de données de A à Z.</p>
+          <p class="text-justify">Nous traduisons vos besoins métier pour concevoir votre base de données de A à Z.</p>
         </div>
       </div>
       <!-- Block Left Middle -->
@@ -260,9 +267,9 @@
         <div class="col-1 mr-4">
           <img class="idea" src="assets/img/idea_bulb.png" alt="">
         </div>
-        <div class="col-7">
+        <div class="col-9">
           <h5>Responsive Design</h5>
-          <p>Nous développons pour une compatibilité sur tous les supports. Tablette/smartphone/Ordinateur.</p>
+          <p class="text-justify">Nous développons pour une compatibilité sur tous les supports. Tablette/smartphone/Ordinateur.</p>
         </div>
       </div>
       <!-- Block Left Bottom -->
@@ -270,9 +277,9 @@
         <div class="col-1 mr-4">
           <img class="idea" src="assets/img/idea_bulb.png" alt="">
         </div>
-        <div class="col-7">
+        <div class="col-9">
           <h5>Back Office</h5>
-          <p>Outil indispensable à la bonne gestion d’un site web, nous concevons votre interface administration.</p>
+          <p class="text-justify">Outil indispensable à la bonne gestion d’un site web, nous concevons votre interface administration.</p>
         </div>
       </div>
     </div>
@@ -300,6 +307,22 @@
   </div>
 
 </div> <!-- end .container -->
+
+
+<!--<div class="buttons">-->
+<!--  <button class="btn-hover color-1">BUTTON</button>-->
+<!--  <button class="btn-hover color-2">BUTTON</button>-->
+<!--  <button class="btn-hover color-3">BUTTON</button>-->
+<!--  <button class="btn-hover color-4">BUTTON</button>-->
+<!--  <button class="btn-hover color-5">BUTTON</button>-->
+<!--  <button class="btn-hover color-6">BUTTON</button>-->
+<!--  <button class="btn-hover color-7">BUTTON</button>-->
+<!--  <button class="btn-hover color-8">BUTTON</button>-->
+<!--  <button class="btn-hover color-9">BUTTON</button>-->
+<!--  <button class="btn-hover color-10">BUTTON</button>-->
+<!--  <button class="btn-hover color-11">BUTTON</button>-->
+<!--</div>-->
+
 
 <!-- FOOTER -->
 <footer class="footer mt-auto py-3 bg-dark">
