Add some animation to others div

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
   <!-- DESCRIPTION -->
   <div class="row justify-content-around align-items-center" id="description">
     <div class="col-3">
-      <h3 class="text-center">Full-Remote</h3>
+      <div class="title">
+        <h3 class="text-center">Full-Remote</h3>
+      </div>
       <div class="js1">
         <p class="text-justify" id="d1">
           L’informatique abolit les distances physique et nous permet de profiter d’un confort de vivre accru
@@ -92,7 +94,9 @@
       <div class="js2">
         <img src="assets/img/undraw_Invite.png" alt="" class="mb-4">
       </div>
-      <h3 class="text-center">Fléxibles</h3>
+      <div class="title">
+        <h3 class="text-center">Fléxibles</h3>
+      </div>
       <div class="js2">
         <p class="text-justify" id="d2">
           Parce que nous comprenons la vie d’un projet, nous nous adaptons à vos contraintes et n’hésitons pas à répondre présent pour traiter vos urgences.
@@ -100,7 +104,9 @@
       </div>
     </div>
     <div class="col-3">
-      <h3 class="text-center">Innovant</h3>
+      <div class="title">
+        <h3 class="text-center">Innovant</h3>
+      </div>
       <div class="js3">
         <p class="text-justify" id="d3">
           Nous saurons réaliser votre projet, quelle que soit votre localisation.
@@ -164,30 +170,34 @@
   </div>
   <!-- OUR TEAM -->
 
-  <h2 class="display-4 text-center text-gradient">NOTRE ÉQUIPE</h2>
+  <div class="title">
+    <h2 class="display-4 text-center text-gradient">NOTRE ÉQUIPE</h2>
+  </div>
 
 
-  <div class="row justify-content-center">
-    <div class="col-8">
-      <div class="card mb-5">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="assets/img/profil_pic_bento.jpg" class="card-img" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title text-center m-3">David Bento-Pereira</h5>
-              <p class="card-text text-justify m-4">
-                <em>“Computer is not the thing, it’s the thing that gets you to the thing”</em> est ma citation préféré.
-                Je vois l’informatique comme un outil au service de l’Humain et j’aurais à coeur de mettre mes
-                compétences au service de votre projet. Revant de liberté, j’ai saisi l’opportunité de m’associer
-                avec Julien pour  me lancer comme freelance.
-              </p>
-              <div class="social_networks--right">
-                <a href="//www.malt.fr/profile/davidbentopereira" target="_blank"><img src="assets/img/logo_malt_round.png" alt="" class="m-2"></a>
-                <a href="//www.linkedin.com/in/david-bento-pereira/" target="_blank"><img src="assets/img/logo_linkedin.png" alt="" class="m-2"></a>
-                <a href="//github.com/davidBentoPereira" target="_blank"><img src="assets/img/logo_github.png" alt="" class="m-2"></a>
-                <a href="//dev.to/bento" target="_blank"><img src="assets/img/logo_dev.to.png" alt="" class="m-2"></a>
+  <div class="bento">
+    <div class="row justify-content-center">
+      <div class="col-8">
+        <div class="card mb-5">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <img src="assets/img/profil_pic_bento.jpg" class="card-img" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-center m-3">David Bento-Pereira</h5>
+                <p class="card-text text-justify m-4">
+                  <em>“Computer is not the thing, it’s the thing that gets you to the thing”</em> est ma citation préféré.
+                  Je vois l’informatique comme un outil au service de l’Humain et j’aurais à coeur de mettre mes
+                  compétences au service de votre projet. Revant de liberté, j’ai saisi l’opportunité de m’associer
+                  avec Julien pour  me lancer comme freelance.
+                </p>
+                <div class="social_networks--right">
+                  <a href="//www.malt.fr/profile/davidbentopereira" target="_blank"><img src="assets/img/logo_malt_round.png" alt="" class="m-2"></a>
+                  <a href="//www.linkedin.com/in/david-bento-pereira/" target="_blank"><img src="assets/img/logo_linkedin.png" alt="" class="m-2"></a>
+                  <a href="//github.com/davidBentoPereira" target="_blank"><img src="assets/img/logo_github.png" alt="" class="m-2"></a>
+                  <a href="//dev.to/bento" target="_blank"><img src="assets/img/logo_dev.to.png" alt="" class="m-2"></a>
+                </div>
               </div>
             </div>
           </div>
@@ -196,28 +206,30 @@
     </div>
   </div>
 
-  <div class="row justify-content-center">
-    <div class="col-8">
-      <div class="card">
-        <div class="row no-gutters">
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title text-center m-3">Julien Tribouillier</h5>
-              <p class="card-text text-justify m-4">
-                Ancien commercial, je me suis reconverti dans l’informatique et plus spécifiquement dans le développement web
-                pour vivre de ma passion. Ma rencontre avec David lors du bootcamp The Hacking Project fut le début d’une belle
-                amitié et posa la première pierre de notre aventure de Freelance.
-              </p>
-              <div class="social_networks--left">
-                <a href="//dev.to/" target="_blank"><img src="assets/img/logo_dev.to.png" alt="" class="m-2"></a>
-                <a href="//github.com/Popikadir" target="_blank"><img src="assets/img/logo_github.png" alt="" class="m-2"></a>
-                <a href="//www.linkedin.com/in/julien-tribouillier/" target="_blank"><img src="assets/img/logo_linkedin.png" alt="" class="m-2"></a>
-                <a href="//www.malt.fr" target="_blank"><img src="assets/img/logo_malt_round.png" alt="" class="m-2"></a>
+  <div class="julio">
+    <div class="row justify-content-center">
+      <div class="col-8">
+        <div class="card">
+          <div class="row no-gutters">
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-center m-3">Julien Tribouillier</h5>
+                <p class="card-text text-justify m-4">
+                  Ancien commercial, je me suis reconverti dans l’informatique et plus spécifiquement dans le développement web
+                  pour vivre de ma passion. Ma rencontre avec David lors du bootcamp The Hacking Project fut le début d’une belle
+                  amitié et posa la première pierre de notre aventure de Freelance.
+                </p>
+                <div class="social_networks--left">
+                  <a href="//dev.to/" target="_blank"><img src="assets/img/logo_dev.to.png" alt="" class="m-2"></a>
+                  <a href="//github.com/Popikadir" target="_blank"><img src="assets/img/logo_github.png" alt="" class="m-2"></a>
+                  <a href="//www.linkedin.com/in/julien-tribouillier/" target="_blank"><img src="assets/img/logo_linkedin.png" alt="" class="m-2"></a>
+                  <a href="//www.malt.fr" target="_blank"><img src="assets/img/logo_malt_round.png" alt="" class="m-2"></a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <img src="assets/img/pic_profile_julio.jpg" class="card-img" alt="...">
+            <div class="col-md-4">
+              <img src="assets/img/pic_profile_julio.jpg" class="card-img" alt="...">
+            </div>
           </div>
         </div>
       </div>
@@ -226,7 +238,9 @@
 
   <!-- OUR SKILLS -->
 
-  <h2 class="display-4 text-center text-gradient">NOS TALENTS</h2>
+  <div class="title">
+    <h2 class="display-4 text-center text-gradient">NOS TALENTS</h2>
+  </div>
 
   <div class="row justify-content-around">
     <!-- Left Column -->
@@ -244,7 +258,7 @@
       <!-- Block Left Middle -->
       <div class="row align-items-center justify-content-end mb-4">
         <div class="col-1 mr-4">
-          <img class="idea" src="assets/img/integration.png" alt="">
+          <img class="idea" src="assets/img/idea_bulb.png" alt="">
         </div>
         <div class="col-9">
           <h5>Intégration Web</h5>
