style: general improvements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>Développeurs Web Ruby on Rails</title>
   <!-- Bootstrap 5 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./assets/css/app.css">
 </head>
@@ -16,7 +18,6 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
   <div class="container-fluid">
-    <!--    <span class="navbar-brand text-gradient logo">Julio & Bento</span>-->
     <div class="neon">
       <p class="neon-text">Julio <span class="first">&</span> Bento</p>
     </div>
@@ -45,16 +46,15 @@
   </div>
 </nav>
 
-
 <!-- JUMBOTRON -->
 <section class="jumbotron jumbotron-fluid mt-5">
   <div class="container text-center text-light">
     <div>
       <h2 class="h3">Parce que deux développeurs valent mieux qu’un.</h2>
-      <a href="#projets" class="m-3">
+      <a href="#projects" class="m-3">
         <button class="btn-hover color-1">NOS PROJETS</button>
       </a>
-      <a href="#contact" class="m-3">
+      <a href="#hire" class="m-3">
         <button class="btn-hover color-8">NOUS RECRUTER</button>
       </a>
     </div>
@@ -67,13 +67,13 @@
   <section id="description">
     <div class="row mb-5">
       <p class="lead text-center">
-        Développeurs Ruby on Rails, nous vous accompagnons dans la réalisation de vos projets web, de la mise en place d’un site vitrinne à un site e-commerce,
+        Développeurs Ruby on Rails, nous vous accompagnons dans la réalisation de vos projets web, de la mise en place d’un site vitrine à un site e-commerce,
         d’un site vitrine Wordpress ou d’une application web complète en Ruby on Rails.
       </p>
     </div>
 
     <div class="row justify-content-around align-items-center">
-      <div class="col-3">
+      <div class="col-lg-3">
         <div class="title">
           <h3 class="text-center">Full-Remote</h3>
         </div>
@@ -87,7 +87,7 @@
           <img src="assets/img/undraw_design_components.png" alt="" class="mt-4">
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-lg-3">
         <div class="js2">
           <img src="assets/img/undraw_Invite.png" alt="" class="mb-4">
         </div>
@@ -100,7 +100,7 @@
           </p>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-lg-3">
         <div class="title">
           <h3 class="text-center">Innovant</h3>
         </div>
@@ -124,11 +124,11 @@
 
     <div class="row mb-5 align-items-center">
 
-      <div class="col-6">
-        <img class="img-fluid rounded" src= assets/img/laptopmonka.png alt="Image Monka Project">
+      <div class="col-lg-7">
+        <img class="img-fluid rounded" src= assets/img/laptop_monka.png alt="Image Monka Project">
       </div>
 
-      <div class="col-5">
+      <div class="col-lg-5">
         <h5 class="text-center mb-4">The Monka Project</h5>
         <p class="card-text text-justify mb-2">
           Monka project est un projet open-source destiné à faciliter la facturation pour les auto-entrepreneurs.
@@ -147,7 +147,7 @@
     </div>
 
     <div class="row align-items-center">
-      <div class="col-5">
+      <div class="col-lg-5">
         <h5 class="text-center mb-4">Cykl</h5>
         <p class="card-text text-justify mb-2">
           Cykl est une application éditée par we are the words sprl, une société d'optimisation de contenu SEO basée
@@ -163,7 +163,7 @@
           <a href="#" class="btn btn-outline-light">Voir le projet</a>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-lg-6">
         <img class="img-fluid rounded" src= assets/img/cykl2laptop.png  alt="Image Cykl Project">
       </div>
     </div>
@@ -245,13 +245,13 @@
 
     <div class="row justify-content-around">
       <!-- Left Column -->
-      <div class="col-5">
+      <div class="col-lg-5">
         <!-- Block Left Top -->
         <div class="row align-items-center justify-content-end mb-4">
-          <div class="col-1 mr-4">
+          <div class="col-lg-1 mr-4">
             <img class="idea" src="assets/img/idea_bulb.png" alt="">
           </div>
-          <div class="col-9">
+          <div class="col-md-9">
             <h5>Développement Web</h5>
             <p class="text-justify">Site vitrine, site e-commerce, application web. Parlez-nous de votre projet.</p>
           </div>
@@ -316,7 +316,7 @@
 
   <!-- HIRE US -->
   <section id="hire">
-    <h2 class="display-4 text-center text-gradient" id="contact">NOUS RECRUTER</h2>
+    <h2 class="display-4 text-center text-gradient">NOUS RECRUTER</h2>
 
     <p class="lead text-center mb-5">Retrouvez-nous sur ces plateformes de Freelancing et proposez-nous votre projet</p>
 
