--- a/index.html
+++ b/index.html
@@ -65,55 +65,39 @@
 
   <!-- DESCRIPTION -->
   <section id="description">
-    <div class="row mb-5">
-      <p class="lead text-center">
-        Développeurs Ruby on Rails, nous vous accompagnons dans la réalisation de vos projets web, de la mise en place d’un site vitrine à un site e-commerce,
-        d’un site vitrine Wordpress ou d’une application web complète en Ruby on Rails.
-      </p>
+    <div class="row justify-content-center mb-4">
+      <div class="col-10">
+        <p class="lead text-center">
+          Développeurs Ruby on Rails, nous vous accompagnons dans la réalisation de vos projets web, de la mise en place d’un site vitrine à un site e-commerce,
+          d’un site vitrine Wordpress ou d’une application web complète en Ruby on Rails.
+        </p>
+      </div>
     </div>
 
     <div class="row justify-content-around align-items-center">
       <div class="col-lg-3">
-        <div class="title">
-          <h3 class="text-center">Full-Remote</h3>
-        </div>
-        <div class="js1">
-          <p class="text-justify" id="d1">
-            L’informatique abolit les distances physique et nous permet de profiter d’un confort de vivre accru
-            pour vous offrir plus de confiance, de  flexibilité et d’engagement.
-          </p>
-        </div>
-        <div class="js1">
-          <img src="assets/img/undraw_design_components.png" alt="" class="mt-4">
-        </div>
+        <h3 class="text-center">Full-Remote</h3>
+        <p class="text-justify">
+          L’informatique abolit les distances physique et nous permet de profiter d’un confort de vivre accru
+          pour vous offrir plus de confiance, de  flexibilité et d’engagement.
+        </p>
+        <img src="assets/img/undraw_design_components.png" alt="" class="mt-4">
       </div>
       <div class="col-lg-3">
-        <div class="js2">
-          <img src="assets/img/undraw_Invite.png" alt="" class="mb-4">
-        </div>
-        <div class="title">
-          <h3 class="text-center">Fléxibles</h3>
-        </div>
-        <div class="js2">
-          <p class="text-justify" id="d2">
-            Parce que nous comprenons la vie d’un projet, nous nous adaptons à vos contraintes et n’hésitons pas à répondre présent pour traiter vos urgences.
-          </p>
-        </div>
+        <img src="assets/img/undraw_Invite.png" alt="" class="mb-4">
+        <h3 class="text-center">Fléxibles</h3>
+        <p class="text-justify" id="d2">
+          Parce que nous comprenons la vie d’un projet, nous nous adaptons à vos contraintes et n’hésitons pas à répondre présent pour traiter vos urgences.
+        </p>
       </div>
       <div class="col-lg-3">
-        <div class="title">
-          <h3 class="text-center">Innovant</h3>
-        </div>
-        <div class="js3">
-          <p class="text-justify" id="d3">
-            Nous saurons réaliser votre projet, quelle que soit votre localisation.
-            Du rêve à la réalité : Nous excellons particulièrement dans la concrétisation de vos idées,
-            même les plus farfelues, pour les transformer en projets et produits innovants.
-          </p>
-        </div>
-        <div class="js3">
-          <img src="assets/img/undraw_server_cluster.png" alt="" class="mt-4">
-        </div>
+        <h3 class="text-center">Innovant</h3>
+        <p class="text-justify" id="d3">
+          Nous saurons réaliser votre projet, quelle que soit votre localisation.
+          Du rêve à la réalité : Nous excellons particulièrement dans la concrétisation de vos idées,
+          même les plus farfelues, pour les transformer en projets et produits innovants.
+        </p>
+        <img src="assets/img/undraw_server_cluster.png" alt="" class="mt-4">
       </div>
     </div>
   </section>
@@ -124,8 +108,8 @@
 
     <div class="row mb-5 align-items-center">
 
-      <div class="col-lg-7">
-        <img class="img-fluid rounded" src= assets/img/laptop_monka.png alt="Image Monka Project">
+      <div class="col-lg-6">
+        <img class="img-fluid rounded" src= assets/img/laptop-monka.png alt="Image Monka Project">
       </div>
 
       <div class="col-lg-5">
@@ -140,7 +124,7 @@
           <span class="badge rounded-pill bg-dark">Heroku</span>
         </div>
         <div class="text-center">
-          <a href="#" class="btn btn-outline-light">Voir le projet</a>
+          <a href="//www.cykl.be/" target="_blank"><button class="btn-hover color-5">VOIR LE PROJET</button></a>
         </div>
       </div>
 
@@ -160,11 +144,11 @@
           <span class="badge rounded-pill bg-dark">Heroku</span>
         </div>
         <div class="text-center">
-          <a href="#" class="btn btn-outline-light">Voir le projet</a>
+          <a href="//monka-project.herokuapp.com/" target="_blank"><button class="btn-hover color-5">VOIR LE PROJET</button></a>
         </div>
       </div>
       <div class="col-lg-6">
-        <img class="img-fluid rounded" src= assets/img/cykl2laptop.png  alt="Image Cykl Project">
+        <img class="img-fluid rounded" src="assets/img/laptop-cykl.png"  alt="Image Cykl Project">
       </div>
     </div>
   </section>
@@ -186,7 +170,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title text-center m-3">David Bento-Pereira</h5>
-                  <p class="card-text text-justify m-4">
+                  <p class="card-text text-justify lead m-4">
                     <em>“Computer is not the thing, it’s the thing that gets you to the thing”</em> est ma citation préféré.
                     Je vois l’informatique comme un outil au service de l’Humain et j’aurais à coeur de mettre mes
                     compétences au service de votre projet. Revant de liberté, j’ai saisi l’opportunité de m’associer
@@ -214,7 +198,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title text-center m-3">Julien Tribouillier</h5>
-                  <p class="card-text text-justify m-4">
+                  <p class="card-text lead text-justify m-4">
                     Ancien commercial, je me suis reconverti dans l’informatique et plus spécifiquement dans le développement web
                     pour vivre de ma passion. Ma rencontre avec David lors du bootcamp The Hacking Project fut le début d’une belle
                     amitié et posa la première pierre de notre aventure de Freelance.
@@ -249,7 +233,7 @@
         <!-- Block Left Top -->
         <div class="row align-items-center justify-content-end mb-4">
           <div class="col-lg-1 mr-4">
-            <img class="idea" src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/idea_bulb.png" alt="">
           </div>
           <div class="col-md-9">
             <h5>Développement Web</h5>
@@ -259,7 +243,7 @@
         <!-- Block Left Middle -->
         <div class="row align-items-center justify-content-end mb-4">
           <div class="col-1 mr-4">
-            <img class="idea" src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/idea_bulb.png" alt="">
           </div>
           <div class="col-9">
             <h5>Intégration Web</h5>
@@ -269,7 +253,7 @@
         <!-- Block Left Bottom -->
         <div class="row align-items-center justify-content-end mb-4">
           <div class="col-1 mr-4">
-            <img class="idea" src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/idea_bulb.png" alt="">
           </div>
           <div class="col-9">
             <h5>Conception de MVP</h5>
@@ -283,7 +267,7 @@
         <!-- Block Left Top -->
         <div class="row align-items-center justify-content-start mb-4">
           <div class="col-1 mr-4">
-            <img class="idea" src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/idea_bulb.png" alt="">
           </div>
           <div class="col-9">
             <h5>Base de Données</h5>
@@ -293,7 +277,7 @@
         <!-- Block Left Middle -->
         <div class="row align-items-center justify-content-start mb-4">
           <div class="col-1 mr-4">
-            <img class="idea" src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/idea_bulb.png" alt="">
           </div>
           <div class="col-9">
             <h5>Responsive Design</h5>
@@ -303,7 +287,7 @@
         <!-- Block Left Bottom -->
         <div class="row align-items-center justify-content-start mb-4">
           <div class="col-1 mr-4">
-            <img class="idea" src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/idea_bulb.png" alt="">
           </div>
           <div class="col-9">
             <h5>Back Office</h5>
@@ -339,19 +323,19 @@
 </div> <!-- end .container -->
 
 
-<!--<div class="buttons">-->
-<!--  <button class="btn-hover color-1">BUTTON</button>-->
-<!--  <button class="btn-hover color-2">BUTTON</button>-->
-<!--  <button class="btn-hover color-3">BUTTON</button>-->
-<!--  <button class="btn-hover color-4">BUTTON</button>-->
-<!--  <button class="btn-hover color-5">BUTTON</button>-->
-<!--  <button class="btn-hover color-6">BUTTON</button>-->
-<!--  <button class="btn-hover color-7">BUTTON</button>-->
-<!--  <button class="btn-hover color-8">BUTTON</button>-->
-<!--  <button class="btn-hover color-9">BUTTON</button>-->
-<!--  <button class="btn-hover color-10">BUTTON</button>-->
-<!--  <button class="btn-hover color-11">BUTTON</button>-->
-<!--</div>-->
+<div class="buttons">
+  <button class="btn-hover color-1">BUTTON</button>
+  <button class="btn-hover color-2">BUTTON</button>
+  <button class="btn-hover color-3">BUTTON</button>
+  <button class="btn-hover color-4">BUTTON</button>
+  <button class="btn-hover color-5">BUTTON</button>
+  <button class="btn-hover color-6">BUTTON</button>
+  <button class="btn-hover color-7">BUTTON</button>
+  <button class="btn-hover color-8">BUTTON</button>
+  <button class="btn-hover color-9">BUTTON</button>
+  <button class="btn-hover color-10">BUTTON</button>
+  <button class="btn-hover color-11">BUTTON</button>
+</div>
 
 
 <!-- FOOTER -->
