--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
   <div class="container text-center text-light">
     <div>
       <h2 class="h3">Parce que deux développeurs valent mieux qu’un.</h2>
-      <a href="#projects" class="m-3">
-        <button class="btn-hover color-1">NOS PROJETS</button>
-      </a>
-      <a href="#hire" class="m-3">
-        <button class="btn-hover color-8">NOUS RECRUTER</button>
-      </a>
+      <a href="#projects" class="m-3"><button class="btn-hover color-1">NOS PROJETS</button></a>
+      <a href="#hire" class="m-3"><button class="btn-hover color-8">NOUS RECRUTER</button></a>
     </div>
   </div>
 </section>
@@ -323,19 +319,19 @@
 </div> <!-- end .container -->
 
 
-<div class="buttons">
-  <button class="btn-hover color-1">BUTTON</button>
-  <button class="btn-hover color-2">BUTTON</button>
-  <button class="btn-hover color-3">BUTTON</button>
-  <button class="btn-hover color-4">BUTTON</button>
-  <button class="btn-hover color-5">BUTTON</button>
-  <button class="btn-hover color-6">BUTTON</button>
-  <button class="btn-hover color-7">BUTTON</button>
-  <button class="btn-hover color-8">BUTTON</button>
-  <button class="btn-hover color-9">BUTTON</button>
-  <button class="btn-hover color-10">BUTTON</button>
-  <button class="btn-hover color-11">BUTTON</button>
-</div>
+<!--<div class="buttons">-->
+<!--  <button class="btn-hover color-1">BUTTON</button>-->
+<!--  <button class="btn-hover color-2">BUTTON</button>-->
+<!--  <button class="btn-hover color-3">BUTTON</button>-->
+<!--  <button class="btn-hover color-4">BUTTON</button>-->
+<!--  <button class="btn-hover color-5">BUTTON</button>-->
+<!--  <button class="btn-hover color-6">BUTTON</button>-->
+<!--  <button class="btn-hover color-7">BUTTON</button>-->
+<!--  <button class="btn-hover color-8">BUTTON</button>-->
+<!--  <button class="btn-hover color-9">BUTTON</button>-->
+<!--  <button class="btn-hover color-10">BUTTON</button>-->
+<!--  <button class="btn-hover color-11">BUTTON</button>-->
+<!--</div>-->
 
 
 <!-- FOOTER -->
