style: edit footer

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 <!-- FOOTER -->
 <footer class="footer mt-auto py-3 bg-dark">
   <div class="container text-center">
-    <span class="text-muted">Made with ♥️ by Julio & Bento</span>
+    <a href="//github.com/Julio-Bento/portfolio">This project is open source ♥️</span>
   </div>
 </footer>
 
